--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,9 +8,11 @@ phases:
   build:
     commands:
       - cd lib
-      - zip -r9 ../deployment_package.zip
+      - zip -r9 ../deployment_package.zip .
       - cd ..
       - zip -g deployment_package.zip lambda_function.py
+  artifacts:
+    - deployment_package.zip
   # post_build:
   #   commands:
   #     - aws lambda update-function-code --function-name tecemer-devops --zip-file fileb://deployment_package.zip
