--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,8 @@ phases:
       - cd ..
       - zip -g deployment_package.zip lambda_function.py
   artifacts:
-    - deployment_package.zip
+    files:
+      - deployment_package.zip
   # post_build:
   #   commands:
   #     - aws lambda update-function-code --function-name tecemer-devops --zip-file fileb://deployment_package.zip
